force-app/main/default/objects/RE_Goal__c/RE_Goal__c.object-meta.xml
<CustomObject>
    <description>This object is use to store the Goals</description>
    <label>Goal</label>
    <nameField>
        <displayFormat>GID-{0000000000}</displayFormat>
        <label>Goal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>