force-app/main/default/objects/RE_Goal__c/fields/Archetype__c.field-meta.xml
<CustomField>
    <fullName>Archetype__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is use to store the Archetype of that particular Goal.</description>
    <label>Archetype</label>
    <referenceTo>RE_Archetype__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>