force-app/main/default/objects/RE_Goal__c/fields/AssetID__c.field-meta.xml
<CustomField>
    <fullName>AssetID__c</fullName>
    <description>Field to store the Asset ID for the goals from Asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>