force-app/main/default/objects/RE_Goal__c/fields/Domain_Category__c.field-meta.xml
<CustomField>
    <fullName>Domain_Category__c</fullName>
    <description>This field relates to Domain Category global picklist.</description>
    <label>Domain Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DomainCategory</valueSetName>
    </valueSet>
</CustomField>